# mlpr

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
conf/: params.yaml
data/01_raw/: .placeholder
data/03_primary/: .placeholder
data/05_reports/: report_model.html
mlpr/ml/supervisioned/regression/: metrics.py  plots.py
mlpr/ml/tunning/: grid_search.py
mlpr/reports/: create.py
notebooks/: 01.ml_regression_examples.ipynb  README.md
notebooks/forecasting/: 01.ml_forecast_examples.ipynb
notebooks/regression/: 01.ml_regression_examples.ipynb  README.md  nb_utils.py
notebooks/supervisioned/: README.md
notebooks/supervisioned/classification/: 01.ml_classification_examples.ipynb  02.ml_metrics.ipynb  03.ml_surrogates.ipynb  README.md
notebooks/supervisioned/regression/: 01.ml_regression_examples.ipynb  02.ml_housing_prices.ipynb  README.md  nb_utils.py
notebooks/supervisioned/tunning/: 01.ml_tunning.ipynb  01.ml_tunning_examples.ipynb  02.ml_tunning_spark.ipynb  README.md  nb_utils.py
src/mlpr/: __init__.py
src/mlpr/ml/supervisioned/forecasting/: metrics.py
src/mlpr/ml/supervisioned/regression/: metrics.py  plots.py
src/mlpr/ml/tunning/: grid_search.py
src/mlpr/reports/: __init__.py  create.py
templates/regression/: template_v0.html  template_v1.html  template_v2.html  template_v3.html
utils/: reader.py  reports.py  utils.py
