[tool.poetry]
name = "lib-mlpr"
version = "0.1.0"
description = "A library for machine learning pipeline and creation of reports."
authors = ["Manuel Ferreira Junior <ferreira.jr.ufpb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
PyYAML = "^6.0.1"
pyspark = "^3.5.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"
matplotlib = "^3.8.4"
xgboost = "^2.0.3"
Jinja2 = "^3.1.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
ipykernel = "^6.29.4"
pre-commit = "^3.3.3"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
    /(\.direnv|\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.venv3|_build|buck-out|build|dist)/
'''

[tool.flake8]
max-line-length = 120
